apps/awx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-server-http-ingress
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: awx.lab.wdalgleish.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx-service
                port:
                  number: 80
  tls:
    - hosts:
        - awx.lab.wdalgleish.com
      secretName: star-lab-wdalgleish-com
